<resources>
    <!-- Main Activity -->
    <string name="app_name">Chore Roulette</string>
    <string name="label_app_name">Chore Roulette</string>
    <string name="button_create_household">Create New Household</string>
    <string name="button_login_household">Login To Household</string>

    <!-- Login Activity -->
    <string name="text_house_id">House ID</string>
    <string name="button_login">Login</string>

    <!-- Add Household Activity -->
    <string name="text_house_name">House Name</string>
    <string name="text_member_name">Member Name</string>
    <string name="button_add_member">Add</string>
    <string name="button_confirm_members">Next</string>

    <!-- Add Chores Activity -->
    <string name="text_chore_list">Chores</string>
    <string name="button_add_chore">Add</string>
    <string name="button_confirm_chores">Next</string>
    <string-array name="chores_array">
        <item>Dishes</item>
        <item>Rubbish</item>
        <item>Toilet</item>
        <item>Vacuum</item>
        <item>Add your own</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- Chore List Activity -->
    <string name="button_copy_hid">Copy</string>
    <string name="label_hid">HID: </string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="list_options">
        <item>Profile</item>
        <item>Change Chores</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Deadline activity -->

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>


</resources>
